--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.3",
+    "@mui/x-data-grid": "^5.16.0",
     "next": "12.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
