--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
     "next": "12.2.5",
