--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
-    "next": "12.2.5",
+    "next": "^12.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
