--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
+    "moment": "^2.29.4",
     "next": "^12.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
